# scc_mod

./: .gitignore  .gitmodules  .natvis  CMakeLists.txt  classes.txt  compile_commands.json  readme.md
cmake/: ConfigureAndIncludeFmt.cmake  ConfigureAndIncludeToml11.cmake  ConfigureAndIncludeWil.cmake
src/: CMakeLists.txt  DetourTransaction.cpp  Main.cpp  Resource.rc  relf.hpp  stdafx.hpp
src/Proxies/: redlexer_native.cpp  redlexer_native.hpp
src/red/: dynArray.hpp  dynamicBuffer.hpp  hashMap.hpp  hashSet.hpp  name.cpp  name.hpp  namePool.hpp  pool.cpp  pool.hpp  poolRegistry.hpp  red.hpp  scriptDataLoader.hpp  scriptDataObject.hpp  string.hpp  utility.hpp
